Added login interface

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   curved_navigation_bar: ^0.3.4
   flutter_spinning_wheel: ^1.1.0
   rflutter_alert: ^1.1.0
+  http: ^0.12.2
+  flutter_facebook_login: ^3.0.0
+#  google_sign_in: ^4.5.0
 
 dev_dependencies:
   flutter_test:
@@ -65,10 +68,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Quicksand
+      fonts:
+        - asset: assets/Quicksand-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
