--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,10 @@ dependencies:
   flutter_spinning_wheel: ^1.1.0
   rflutter_alert: ^1.1.0
   http: ^0.12.2
+  provider: ^4.3.2+3
+  shared_preferences: ^0.5.12+4
   flutter_facebook_login: ^3.0.0
-#  google_sign_in: ^4.5.0
+  # google_sign_in: 4.0.2
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +57,7 @@ flutter:
      - Image/roulette-8-300.png
      - Image/cpointer.png
      - images/close.png
+     - assets/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
