--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   provider: ^4.3.2+3
   shared_preferences: ^0.5.12+4
   flutter_facebook_login: ^3.0.0
-  # google_sign_in: 4.0.2
+  google_sign_in: 4.0.2
   scratcher: ^1.4.0
 
 dev_dependencies:
