--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   google_sign_in: 4.0.2
   scratcher: ^1.4.0
+  dart_random_choice: ^0.0.2
 
 dev_dependencies:
   flutter_test:
