--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - Image/roulette-8-300.png
+     - Image/roulette-8-300.jpeg
      - Image/cpointer.png
      - images/close.png
      - assets/
