--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   scratcher: ^1.4.0
   dart_random_choice: ^0.0.2
   share: ^0.6.5+4
+  roller_list: ^0.6.1
 
 dev_dependencies:
   flutter_test:
