--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,11 @@ dependencies:
   scratcher: ^1.4.0
   dart_random_choice: ^0.0.2
   share: ^0.6.5+4
-  roller_list: ^0.6.1
   rate_my_app: ^0.7.2
+  roller_list: ^0.6.1
+  flutter_neumorphic: ^3.0.3
+
+
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +70,19 @@ flutter:
      - Image/scratchcard.jpg
      - Image/itctactoeimg.jpg
      - Image/memorygameimg.jpg
+     - assets/images/0.png
+     - assets/images/1.png
+     - assets/images/2.png
+     - assets/images/3.png
+     - assets/images/4.png
+     - assets/images/5.png
+     - assets/images/6.png
+     - assets/images/7.png
+     - assets/images/8.png
+     - assets/images/9.png
+     - assets/images/slot-machine.jpg
+
+
 
 
 
