--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   roller_list: ^0.6.1
   flutter_neumorphic: ^3.0.3
   assets_audio_player: ^2.0.13+1
+  url_launcher: ^5.7.10
+  device_apps: ^1.2.0
+
 
 
 
